# multiboxes

./: .gitignore  README.md  STUDY_GUIDE.md  launcher.py  pyproject.toml  requirements.txt
src/multibox/: __init__.py  avahi_utils.py  game_client.py  game_server.py  player.py
tests/: test_server.py
