[project]
name = "multibox"
version = "0.1.0"
description = "A UDP-based game server for pygame and pymunk in asyncio"
authors = [{ name = "Giovanni Lion", email = "giovanni.lion@gmail.com" }]
requires-python = ">=3.8"

dependencies = [
    "pygame",
    "pymunk",
    "python-osc",
    "zeroconf"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]